app/website-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-music
  name: website-service
spec:
  type: ClusterIP
  selector:
    app: spring-music
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
