app/website-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-ingress
  labels:
    app: argocdrocks
  annotations:
    kubernetes.io/ingress.class: "traefik"
spec:
  rules:
  - host: argocdrocks.vcap.me
    http:
      paths:
      - path: /
        backend:
          serviceName: website-service
          servicePort: 80
